--- a/common.de_CH.po
+++ b/common.de_CH.po
@@ -16,6 +16,7 @@
 # cvcxc <hans.andersen72@yahoo.com>, 2013
 # cvcxc <hans.andersen72@yahoo.com>, 2013
 # Yepoleb <huberg18@gmail.com>, 2013
+# Iwan Gabovitch, 2024
 # Larson März <larson@protonmail.ch>, 2016
 # Larson März <larson@protonmail.ch>, 2016
 # afba88cf42cbdff57149d4a6d53a94f9, 2018
@@ -33,9 +34,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Xonotic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-05-26 07:22+0200\n"
+"POT-Creation-Date: 2024-05-27 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Yepoleb <huberg18@gmail.com>, 2013\n"
+"Last-Translator: Iwan Gabovitch, 2024\n"
 "Language-Team: German (http://app.transifex.com/team-xonotic/xonotic/"
 "language/de/)\n"
 "Language: de\n"
@@ -171,7 +172,7 @@ msgstr "Serverinfo anzeigen"
 #: qcsrc/client/hud/panel/infomessages.qc:133
 #, c-format
 msgid "^2You're queued to join the %s%s^2 team"
-msgstr ""
+msgstr "^2Du wartest darauf, dem Team %s%s^2 beizutreten"
 
 #: qcsrc/client/hud/panel/infomessages.qc:136
 #, c-format
@@ -645,19 +646,19 @@ msgstr ""
 
 #: qcsrc/client/hud/panel/scoreboard.qc:145
 msgid "SCO^destructions"
-msgstr ""
+msgstr "Zerstörungen"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:146
 msgid "SCO^damage dealt"
-msgstr ""
+msgstr "Schaden zugefügt"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:146
 msgid "The total damage dealt"
-msgstr ""
+msgstr "Der zugefügte Gesamtschaden"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:147
 msgid "SCO^damage taken"
-msgstr ""
+msgstr "Schaden erlitten"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:147
 msgid "The total damage taken"
@@ -721,11 +722,11 @@ msgstr "SCO^frags"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:155
 msgid "Number of generators destroyed"
-msgstr ""
+msgstr "Anzahl der zerstörten Generatoren"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:155
 msgid "SCO^generators"
-msgstr ""
+msgstr "Generatoren"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:156
 msgid "Number of goals scored"
@@ -1369,7 +1370,7 @@ msgstr "Spieltyp:"
 
 #: qcsrc/client/main.qc:1463
 msgid "by:"
-msgstr ""
+msgstr "von:"
 
 #: qcsrc/client/main.qc:1467
 msgid "This match supports"
@@ -3327,12 +3328,12 @@ msgstr "^BG%s^F3 spielt jetzt für Team ^TC^TT^BG"
 #: qcsrc/common/notifications/all.inc:395
 #, c-format
 msgid "^BG%s^F3 wants to play on the ^TC^TT team"
-msgstr ""
+msgstr "^BG%s^F3 möchte im Team ^TC^TT spielen"
 
 #: qcsrc/common/notifications/all.inc:396
 #, c-format
 msgid "^BG%s^F3 wants to play"
-msgstr ""
+msgstr "^BG%s^F3 möchte spielen"
 
 #: qcsrc/common/notifications/all.inc:398
 #: qcsrc/common/notifications/all.inc:728
@@ -3459,12 +3460,12 @@ msgstr ""
 #: qcsrc/common/notifications/all.inc:429
 #, c-format
 msgid "^BG%s^F3 has left the queue after idling for %s seconds"
-msgstr ""
+msgstr "^BG%s^F3 hat nach %s Sekunden Inaktivität die Warteliste verlassen"
 
 #: qcsrc/common/notifications/all.inc:430
 #, c-format
 msgid "^BG%s^F3 was moved to^BG spectators^F3 for balance reasons"
-msgstr ""
+msgstr "^BG%s^F3 wurde zwecks Balancing zum ^BGZuschauen^F3 verschoben"
 
 #: qcsrc/common/notifications/all.inc:431
 msgid ""
@@ -3493,7 +3494,7 @@ msgstr "^BG%s^F3 schaut nun zu"
 #: qcsrc/common/notifications/all.inc:435
 #, c-format
 msgid "^BG%s^F3 has left the queue"
-msgstr ""
+msgstr "^BG%s^F3 hat die Warteliste verlassen"
 
 #: qcsrc/common/notifications/all.inc:437
 #, c-format
@@ -4507,6 +4508,8 @@ msgid ""
 "^K1Teams unbalanced!\n"
 "^BGMoving %s^BG to spectators in ^COUNT..."
 msgstr ""
+"^K1Die Teams sind unausgeglichen!\n"
+"^BG%s^BG wird zum Zuschauer in ^COUNT …"
 
 #: qcsrc/common/notifications/all.inc:687
 #, c-format
@@ -4602,15 +4605,15 @@ msgstr "^K1Der angegebenen Minispielsitzung kann nicht beigetreten werden!"
 
 #: qcsrc/common/notifications/all.inc:724
 msgid "^BGYou are now queued to join the game."
-msgstr ""
+msgstr "^BGDu stehst nun in der Warteliste zum Spielbeitritt."
 
 #: qcsrc/common/notifications/all.inc:725
 msgid "^BGYou are now queued to join on ^TC^TT^BG team."
-msgstr ""
+msgstr "^BGDu stehst nun in der Warteliste zum Beitritt im Team ^TC^TT^BG."
 
 #: qcsrc/common/notifications/all.inc:726
 #, c-format
-msgid "^K2Please choose a different team! %s^K2 chose ^TC^TT^BG first."
+msgid "^K2Please choose a different team! %s^K2 chose ^TC^TT^K2 first."
 msgstr ""
 
 #: qcsrc/common/notifications/all.inc:730
